# c-getgud-sdk

./: README.md
examples/Starter_dll/: starter.vcxproj
examples/Starter_so/: CMakeLists.txt
